--- a/minutes/Base.lproj/LaunchScreen.storyboard
+++ b/minutes/Base.lproj/LaunchScreen.storyboard
@@ -29,13 +29,13 @@
                                     <constraint firstAttribute="height" constant="154" id="Qrk-lm-iTi"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="BodoniSvtyTwoOSITCTT-BookIt" family="Bodoni 72 Oldstyle" pointSize="100"/>
-                                <color key="textColor" red="0.98431372549999996" green="0.0" blue="0.42352941179999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.95614188909999998" green="0.95864742989999996" blue="0.93725234270000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
-                                <color key="shadowColor" red="0.46278595924377441" green="0.0" blue="0.17837508022785187" alpha="1" colorSpace="calibratedRGB"/>
-                                <size key="shadowOffset" width="1" height="1"/>
+                                <color key="shadowColor" red="1" green="0.33340460059999999" blue="0.57701140640000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <size key="shadowOffset" width="2" height="2"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.99607843139999996" green="0.7843137255" blue="0.87450980389999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.2274509804" green="0.18039215689999999" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="The-65-zer" firstAttribute="firstBaseline" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="0vC-hz-fFR"/>
